# dfs-analytics-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
docker-scripts/: init_superset.sh  init_superset_db.sh  superset_config.py
docker-scripts/postgres/: 01-init-superset-db.sql
dockerfiles/: Dockerfile.airflow  Dockerfile.spark  Dockerfile.superset
docs/: dds_layer.md  development_setup.md  staging_layer.md  superset_setup.md
docs/data_structure/: dds_structure.md  espn_odds_data_structure_v1.md  staging_structure.md
docs/faq/: dfs.md
docs/results/: nfl_single_game.md
scripts/: init_superset_db.sh
src/dags/: daily_dds_dag.py  daily_extra_spiders_scraping_dag.py  daily_scraping_dag.py  espn_odds_scraping_dag.py  min_points_api_dag.py  moneypuck_dds_dag.py  test_scripts_import.py
src/notebooks/: check_contests_structure.ipynb  dds_development.ipynb  dev_dds_moneypuck.ipynb  dev_min_points_with_percentiles_analysis.ipynb  draft_groups_dds_processing.ipynb  duckdb_s3_example.ipynb  min_points_with_percentiles_analysis.ipynb  nhl_correlations.ipynb  test-spark-work.ipynb  test_contest_analyze_load.ipynb  test_date_tracker.ipynb  test_dds_dag.ipynb  test_jsonl_staging_load.ipynb  wasabi_s3_example.ipynb
src/notebooks/marts/: dev_top_user_analysys.ipynb  (+5 more)
src/schemas/: __init__.py  core.py
src/scripts/: base_duck_db_processor.py  date_tracker.py  dds_processing.py  dds_processor.py  duck_db_staging_processor.py  min_points_processing.py  min_points_processor.py  rotogrinders_scraper.py  staging.py  staging_processor.py
(+27 files in other folders)
