[project]
name = "dfs-analytics-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "fsspec>=2025.9.0",
    "jupyterlab>=4.4.9",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "s3fs>=2025.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
