[project]
name = "dfs-analytics-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "fsspec>=2025.9.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "s3fs>=2025.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
airflow = [
    "apache-airflow==3.1.0",
]
superset = [
    "psycopg2-binary==2.9.10",
    "duckdb-engine>=0.17.0",
    "redis==5.0.1",
    "cachelib>=0.10.2",
]
